log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-file
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: log-output-generator
          image: eokarnas/dwk-log-output-generator:1.11
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-file
              mountPath: /app/files
        - name: log-output-reader
          image: eokarnas/dwk-log-output-reader:1.11
          imagePullPolicy: Always
          volumeMounts:
            - name: shared-file
              mountPath: /app/files
